syntax = "proto3";

option csharp_namespace = "Elsa.Runtime.Protos";

import "google/protobuf/empty.proto";
import "Messages.proto";

service WorkflowDefinitionGrain {
  rpc Execute (ExecuteWorkflowDefinitionRequest) returns (ExecuteWorkflowDefinitionResponse);
}

service WorkflowInstanceGrain {
  rpc ExecuteExistingInstance (ExecuteExistingWorkflowInstanceRequest) returns (ExecuteWorkflowInstanceResponse);
  rpc ExecuteNewInstance (ExecuteNewWorkflowInstanceRequest) returns (ExecuteWorkflowInstanceResponse);
  rpc Execute (ExecuteWorkflowRequest) returns (ExecuteWorkflowInstanceResponse);
}